[package]
name = "ludock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
glam = "0.30.9"
image = "0.25.9"
imageproc = "0.25.0"
nom = "8.0.0"
rusttype = { version = "0.9.3", features = ["default"] }
schemars = { version = "1.1.0", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde", "v5"] }
walkdir = "2.5.0"
